terraform/vpc_security_groups.tf

resource "aws_security_group" "bastion" {
  vpc_id = aws_vpc.eks.id
  name   = "bastion"
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["10.200.0.0/16"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "bastion"
  }

}

resource "aws_security_group" "eks" {
  vpc_id = aws_vpc.eks.id
  name   = "eks"
  ingress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["10.200.0.0/16"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = -1
    cidr_blocks = ["0.0.0.0/0"]
  }
  tags = {
    Name = "eks"
  }
}
